--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "keen-ui": "^1.0.0",
     "vue": "^2.1.10",
     "vue-router": "^2.2.0",
+    "vuescroll": "^4.17.3",
     "vuex": "^2.1.2"
   },
   "devDependencies": {
